toList()로 변경 무의미한 javadoc 삭제 unused import statement 제거