@@ -18,7 +18,6 @@ import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -77,7 +76,7 @@ public class CommentService {
         List<Comment> comments = commentRepository.findByTaskId(task.getId());
         return comments.stream()
                 .map(CommentResponse::from)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
